<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Recipe categories -->
    <string-array name="recipe_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>

    </string-array>

    <string-array name="time_filters">
        <item>Less than 15 mins</item>
        <item>15-30 mins</item>
        <item>30-60 mins</item>
        <item>60+ mins</item>
    </string-array>
    
    <!-- Measurement units -->
    <string-array name="measurement_units">
        <item>pcs</item>
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>cup</item>
        <item>oz</item>
        <item>lb</item>
        <item>pinch</item>
        <item>piece</item>
        <item>slice</item>
        <item>clove</item>
        <item>bunch</item>
        <item>can</item>
        <item>package</item>
        <item>to taste</item>
    </string-array>
</resources>