...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/recipeListFragment"
        android:icon="@drawable/ic_recipe"
        android:title="Recipes" />
    <item
        android:id="@+id/createRecipeFragment"
        android:icon="@drawable/ic_add"
        android:title="Create" />
    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@drawable/ic_grocery"
        android:title="Shopping" />
...
