<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom">
        <menu
            android:background="?attr/colorSurface">
            <item
                android:id="@+id/action_share_sms"
                android:icon="@drawable/ic_sms"
                android:title="@string/share_via_sms" />
            <item
                android:id="@+id/action_share_email"
                android:icon="@drawable/ic_mail"
                android:title="@string/share_via_email" />
            <item
                android:id="@+id/action_share_social"
                android:title="@string/share_via_other_apps" />
        </menu>
    </item>
    <item
        android:id="@+id/action_add_to_shopping_list"
        android:icon="@drawable/ic_grocery"
        android:title="@string/add_to_shopping_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_more_vert"
        android:title=""
        app:showAsAction="always">
        <menu
            android:background="?attr/colorSurface"
            >
            <item
                android:id="@+id/action_edit_recipe"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_recipe" />
            <item
                android:id="@+id/action_delete_recipe"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_recipe" />
        </menu>
    </item>
    
</menu>